--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -7,7 +7,7 @@
 <% if @customer.errors.any? %>
   <div class='row'>
     <div class="col-sm-6">
-    <div class="col-sm-6 px-5 px-sm-0 mx-auto">
+    <div class="col-sm-6">
       <%= @customer.errors.count %>件のエラーが発生しました
         <ul>
           <% @customer.errors.full_messages.each do |message| %>
