--- a/app/views/admin/genres/create.js.erb
+++ b/app/views/admin/genres/create.js.erb
@@ -1,1 +1,2 @@
-$("#genre_all").html("<%= escape_javascript(render('admin/genres/genre_index', genres: @genres, genre: @genre ))%>")
+$("#genre_all").html("<%= escape_javascript(render('admin/genres/genre_index', genres: @genres, genre: @genre))%>")
+$("#flash-alert").html("<%= alert %>")
