--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <!--<p class = "text-center text-danger">< %= flash[:error] %></p>-->
       <!--<p class = "text-center text-success">< %= flash[:notice] %></p>-->
       <p class="notice text-center text-success"><%= notice %></p>
-      <p class="alert text-center text-danger"><%= alert %></p>
+      <p id="flash-alert" class="alert text-center text-danger p-0"><%= alert %></p>
      </div>
       <main>
         <div class = "container mt-5">
