--- a/app/views/admin/items/_error.html.erb
+++ b/app/views/admin/items/_error.html.erb
@@ -1,3 +1,3 @@
 <% if item.errors.any? %>
-  <p class="text-danger">Please fill in all forms</p>
+  <p class="text-danger">全てのフォームを入力してください</p>
 <% end %>
