--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,70 +1,75 @@
-<div class = "container">
-  <div class = "row">
-    <div class = "col">
-      <h2>商品編集</h2>
-    </div>
-    <div class = "col">
-      <p><%= render 'error', item: @item %></p>
-    </div>
+<div class = "row">
+  <div class = "col-sm-2">
+    <h3 class ="text-center mx-1" style="background-color: #d3d3d3;"><b>商品編集</b></h3>
   </div>
-  <%= form_with model: @item, url: admin_item_path(@item.id), method: :patch , local:true do |f| %>
-  <div class = "row">
-    <div class = "col-2">
-      <p>商品画像</p>
-    </div>
-    <div class = "col-4">
-      <%= f.file_field :item_image, accept: "image/*" %>
-    </div>
+  <div class = "col">
+    <p><%= render 'error', item: @item %></p>
   </div>
-  <div class = "row">
-    <div class = "col-2">
-      <p>商品名</p>
+</div>
+<div class = "row justify-content-center">
+  <div class = "col-sm-8">
+<%= form_with model: @item, url: admin_item_path(@item.id), method: :patch , local:true do |f| %>
+    <div class = "row py-1">
+      <div class = "col-3">
+        <%= f.label :item_image, "商品画像" %>
+      </div>
+      <div class = "col-6 pr-0">
+        <%= f.file_field :item_image, accept: "image/*" %>
+      </div>
     </div>
-    <div class = "col-4">
-      <%= f.text_field :name, class: 'form-control' %>
+    <div class = "row py-1">
+      <div class = "col-3">
+        <%= f.label :name, "商品名" %>
+      </div>
+      <div class = "col-6 pr-0">
+        <%= f.text_field :name, class: 'form-control' %>
+      </div>
     </div>
-  </div>
-  <div class = "row">
-    <div class = "col-2">
-      <p>商品説明</p>
+    <div class = "row py-1">
+      <div class = "col-3">
+        <%= f.label :body, "商品説明" %>
+      </div>
+      <div class = "col-6 pr-0">
+        <%= f.text_area :body, class: 'form-control',style: "height: calc( 1.3em * 8 );line-height: 1.3;" %>
+      </div>
     </div>
-    <div class = "col-4">
-      <%= f.text_area :body, class: 'form-control' %>
+    <div class = "row py-1">
+      <div class = "col-3">
+        <%= f.label :genre_id, "ジャンル" %>
+      </div>
+      <div class = "col-6 pr-0">
+        <%= f.collection_select :genre_id, @genre, :id, :name, class: 'form-control' %>
+      </div>
     </div>
-  </div>
-  <div class = "row">
-    <div class = "col-2">
-      <p>ジャンル</p>
+    <div class = "row py-1">  
+      <div class = "col-3">
+        <%= f.label :non_tax_price, "税抜価格" %>
+      </div>
+      <div class = "col-6 pr-0">
+        <%= f.text_field :non_tax_price, class: 'form-control' %>
+      </div>
+      <div class = "col-1 pl-1 pt-2">
+        円
+      </div>
     </div>
-    <div class = "col-4">
-      <%= f.collection_select :genre_id, @genre, :id, :name, include_blank: "選択して下さい" %>
+    <div class = "row py-1">
+      <div class = "col-3">
+        <p>販売ステータス</p>
+      </div>
+      <div class = "col-6">
+        <%= f.radio_button :is_selling, "true" %>
+        <%= f.label :is_selling, "販売中" %>
+        <%= f.radio_button :is_selling, "false" %>
+        <%= f.label :is_selling, "販売停止中" %>
+      </div>
     </div>
-  </div>
-  <div class = "row">
-    <div class = "col-2">
-      税抜価格
+    <div class = "row py-1">
+      <div class = "col-3">
+      </div>
+      <div class = "col-6">
+        <%= f.submit "変更を保存", class: 'btn btn-success' %>
+      </div>
     </div>
-    <div class = "col-4">
-      <%= f.text_area :non_tax_price, class: 'form-control' %>
-    </div>
-  </div>
-  <div class = "row">
-    <div class = "col-2">
-      <p>販売ステータス</p>
-    </div>
-    <div class = "col-4">
-      <%= f.radio_button :is_selling, "true" %>
-      <%= f.label :is_selling, "販売中" %>
-      <%= f.radio_button :is_selling, "false" %>
-      <%= f.label :is_selling, "販売停止中" %>
-    </div>
-  </div>
-  <div class = "row">
-    <div class = "col-2">
-    </div>
-    <div class = "col-4">
-      <%= f.submit class: 'btn btn-success' %>
-    </div>
-  </div>
-  <% end %>
+<% end %>
+ </div>
 </div>
