--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -1,3 +1,3 @@
 <li class="page-item">
-  <%= link_to_unless current_page.first?, raw(t 'views.pagination.previous'), url, rel: 'prev', remote: remote, class: 'page-link' %>
+  <%= link_to_unless current_page.first?, "<previous", url, rel: 'prev', remote: remote, class: "px-1"  %>
 </li>
