--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -1,9 +1,8 @@
-<div class='container'>
+<%= render "public/shared/error_messages", resource: resource %>
   <div class = "col-sm-4 px-5 pb-5 ">
     <h3 class ="text-center mx-1" style="background-color: #d3d3d3;"><b>新規会員登録</b></h3>
   </div>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-    <%= render "public/shared/error_messages", resource: resource %>
   <div class="row g-3 align-items-center p-1">
     <div class="col-3">
       名前
@@ -121,7 +120,7 @@
 
     </div>
     <div class="col-sm-3 col-7">
-      <%= f.submit "新規登録ボタン" ,class: 'btn btn-sm btn-success form-control pt' %>
+      <%= f.submit "新規登録ボタン" ,class: 'btn btn-sm btn-success form-control ' %>
     </div>
   </div>
   <% end %>
@@ -131,4 +130,3 @@
   <div class = "col-sm-6 text-center">
   <%= render "public/shared/links" %><span>からログインしてください</span>
   </div>
-</div>
