--- a/app/views/public/customers/confirmation.html.erb
+++ b/app/views/public/customers/confirmation.html.erb
@@ -14,12 +14,14 @@
  <div class="col-sm-1"></div>
 </div>
 <div class="row">
- <div class="col-sm-3 text-center justify-content-center"></div>
+  <!--<div class="col-sm-4"></div>-->
+ <div class="col-sm-12 text-center justify-content-center">
   <%= link_to public_mypage_path, class: "btn btn-primary col-sm-2 mx-3" do %>
     退会しない
   <% end %>
   <%= link_to public_mypage_path, method: :patch, class: "btn btn-danger col-sm-2 mx-3" do %>
     退会する
   <% end %>
-  <div class="col-sm-3"></div>
+  </div>
+  <!--<div class="col-sm-4"></div>-->
 </div>
