--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="row">
-  <div class="col-sm-3 d-flex justify-content-center">
+  <div class="col-sm-3 d-flex justify-content-center mb-3">
     <h3 class = "bg-light" style="background-color: #d3d3d3;"><b>会員情報編集</b></h3>
   </div>
 </div>
 
 <% if @customer.errors.any? %>
   <div class='row'>
-    <div class="col-sm-6">
-    <div class="col-sm-6">
+    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
       <%= @customer.errors.count %>件のエラーが発生しました
         <ul>
           <% @customer.errors.full_messages.each do |message| %>
@@ -15,6 +15,7 @@
           <% end %>
         </ul>
     </div>
+    <div class="col-sm-4"></div>
   </div>
 <% end %>
 
@@ -57,6 +58,5 @@
     <div class="col-sm-2"><%= link_to public_customer_confirmation_path, class: "btn btn-danger mx-3 my-1" do %>
       退会する
     <% end %></div>
-
   </div>
 <% end %>
