--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -8,12 +8,7 @@
   <div class='row'>
     <div class="col-sm-6">
     <div class="col-sm-6">
-      <%= @address.errors.count %>件のエラーが発生しました
-        <ul>
-          <% @address.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
+      <%= render "public/shared/error_messages", resource: @address %>
     </div>
   </div>
 <% end %>
