--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -8,12 +8,7 @@
   <div class='row'>
     <div class="col-sm-4"></div>
     <div class="col-sm-4">
-      <%= @customer.errors.count %>件のエラーが発生しました
-        <ul>
-          <% @customer.errors.full_messages.each do |message| %>
-            <li><%= message %></li>
-          <% end %>
-        </ul>
+      <%= render "public/shared/error_messages", resource: @customer %>
     </div>
     <div class="col-sm-4"></div>
   </div>
