--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -3,7 +3,7 @@
     <table frame = "box">
       <thead>
         <tr>
-          <th class = "col-sm-1 text-center" style="border: 1px solid black;">ジャンル一覧</th>
+          <th class = "col-sm-1 text-center" style="border: 1px solid black;">ジャンル検索</th>
         </tr>
       </thead>
       <tbody>
