--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -10,7 +10,7 @@
       <tbody>
       <% @genres.each do |genres| %>
         <tr>
-          <td class = "col-sm-1"><%= genres.name %></td>
+          <td class = "col-sm-1"  style="word-break: break-all;"><%= genres.name %></td>
         </tr>
       <% end %>
       </tbody>
