--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -9,7 +9,7 @@
       <tbody>
       <% @genres.each do |genres| %>
         <tr>
-          <td class = "col-sm-1"><%= genres.name %></td>
+          <td class = "col-sm-1" style="word-break: break-all;"><%= genres.name %></td>
         </tr>
       <% end %>
       </tbody>
@@ -34,7 +34,7 @@
             <b class = "text-success">販売中</b>
               <%= form_with model: @cart_item, url: public_cart_items_path, local:true do |f| %>
               <% if customer_signed_in? %>
-                <%= f.hidden_field :customer_id, :value => 2 %>
+                <%= f.hidden_field :customer_id, :value => current_customer.id %>
               <% end %>
                 <%= f.hidden_field :item_id, :value => @item.id %>
                 <%= f.select :quantity, *[1..10], include_blank: "個数選択"  %>
