--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
-<header>
-  <nav class="navbar navbar-expand-lg navbar navbar-light " style="background-color: #f2a0a1;">
+<header style="background-color: #f2a0a1;">
+  <nav class="navbar navbar-expand-lg navbar navbar-light">
     <div class="container">
-      <div class="row collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="row navbar-collapse" id="navbarNavDropdown">
         <div class="col-sm-2">
           <span>ながのCAKE</span>
         </div>
