--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h1>ユーザー注文履歴一覧</h1>
+<h1>注文履歴一覧</h1>
 <table class='table'>
   <thead>
     <tr>
@@ -13,8 +13,8 @@
   <tbody>
     <% @orders.each do |order| %>
     <tr>
-     <td><%= order.created_at %></td>
-     <td><%= order.postal_code %></br>
+     <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
+     <td><%= "〒" + order.postal_code %></br>
          <%= order.address %></br>
          <%= order.name %>
      </td>
@@ -24,9 +24,9 @@
          <%= item.name %></br>
          <% end %>
      </td>
-     <td><%= order.total_payment.to_s(:delimited) %></td>
-     <td><%= order.trade_status %></td>
-     <td><%= link_to "表示する",public_order_path(order) %></td>
+     <td><%= order.total_payment.to_s(:delimited) + "円" %></td>
+     <td><%= order.trade_status_i18n %></td>
+     <td><%= link_to "表示する",public_order_path(order), class: "btn btn-primary" %></td>
     </tr>
     <% end %>
   </tbody>
