--- a/app/views/public/cart_items/_all_cart_items.html.erb
+++ b/app/views/public/cart_items/_all_cart_items.html.erb
@@ -1,7 +1,7 @@
 <div id="all_cart_items">
   <table class="table table-bordered border-primary" >
     <thead>
-      <tr>
+      <tr class="table-active">
         <!--個々のサイズ変更(col指定？)がわからぬ-->
         <!--単価小計の数値にclassがつけられないのわからぬ-->
         <!--デフォルトのボーダーが邪魔して無茶苦茶になるで-->
