--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -3,7 +3,7 @@
 <table class='table'>
   <tr>
     <th>注文日</th>
-    <td><%= @order.created_at %></td>
+    <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>
   </tr>
   <tr>
     <th>配送先</th>
@@ -15,11 +15,11 @@
   </tr>
   <tr>
     <th>支払方法</th>
-    <td><%= @order.payment_method %></td>
+    <td><%= @order.payment_method_i18n %></td>
   </tr>
   <tr>
     <th>ステータス</th>
-    <td><%= @order.trade_status %></td>
+    <td><%= @order.trade_status_i18n %></td>
   </tr>
 </table>
 <h2>請求情報</h2>
